modificaciones varias html

--- a/index.html
+++ b/index.html
@@ -21,17 +21,16 @@
         <div class="section-center">
             <!--single item-->
             <article class="item">
-                <img src="https://elcomercio.pe/resizer/pfVziOV4X8Vu9nwknDc-oNItlB8=/1200x900/smart/filters:format(jpeg):quality(75)/cloudfront-us-east-1.images.arcpublishing.com/elcomercio/6Y2EDIISGFGVFANEVDCR5LCG34.jpg" class='photo'alt="menu item">
+                <img src="https://elcomercio.pe/resizer/pfVziOV4X8Vu9nwknDc-oNItlB8=/1200x900/smart/filters:format(jpeg):quality(75)/cloudfront-us-east-1.images.arcpublishing.com/elcomercio/6Y2EDIISGFGVFANEVDCR5LCG34.jpg" class='photo'alt="luismi">
                 <div class="item-info">
                     <header>
                         <h4>Luis Miguel Rodriguez</h4>
-                        <a href="https://github.com/"><h4 class="boton">Perfil de GitHub</h4></a>
+                        <a href="https://github.com/luismiguelrodriguez3" target="_blank"><h4 class="boton">Perfil de GitHub</h4></a>
                     </header>
                     <p class="item-text">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                        at omnis placeat a autem quia repudiandae pariatur, 
-                        quidem iste dicta tenetur reprehenderit. Molestiae ipsa 
-                        rerum eius. Tenetur, nihil ea!
+                       Lucho, como muchos me llaman jajaj, estudiante de IV semestre de Tecnología en Sistemas
+                       me gusta el senderismo, los atardeceres, y joder demasiado :), además de que me gusta compartir mi conocimiento
+                       con el otro, así nos ayudamos a crecer :):
                     </p>
                 </div>
             </article> 
@@ -39,17 +38,18 @@
         <div class="section-center">
             <!--single item-->
             <article class="item">
-                <img src="https://elcomercio.pe/resizer/pfVziOV4X8Vu9nwknDc-oNItlB8=/1200x900/smart/filters:format(jpeg):quality(75)/cloudfront-us-east-1.images.arcpublishing.com/elcomercio/6Y2EDIISGFGVFANEVDCR5LCG34.jpg" class='photo'alt="menu item">
+                <img src="http://pm1.narvii.com/6635/85d1e94441fd8fd030f90f9cbadca53a77ee0786_00.jpg" class='photo'alt="carlitos">
                 <div class="item-info">
                     <header>
-                        <h4>Luis Miguel Rodriguez</h4>
-                        <a href="https://github.com/"><h4 class="boton">Perfil de GitHub</h4></a>
+                        <h4>Carlos Maya</h4>
+                        <a href="https://github.com/" target="_blank"><h4 class="boton">Perfil de GitHub</h4></a>
                     </header>
                     <p class="item-text">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                        at omnis placeat a autem quia repudiandae pariatur, 
-                        quidem iste dicta tenetur reprehenderit. Molestiae ipsa 
-                        rerum eius. Tenetur, nihil ea!
+                        Mi nombre es Carlos Andrés Maya Upegui me gustan los videojuegos el anime y los 
+                        computadores, soy un entusiasta de la tecnología y 
+                        me gusta mucho estan siempre con conocimiento de los 
+                        nuevos equipos que salen al mercado... Me gusta mucho ir al gimnasio 
+                        y me gusta mucho mantener un estilo de vida saludable
                     </p>
                 </div>
             </article> 
@@ -57,11 +57,11 @@
         <div class="section-center">
             <!--single item-->
             <article class="item">
-                <img src="https://elcomercio.pe/resizer/pfVziOV4X8Vu9nwknDc-oNItlB8=/1200x900/smart/filters:format(jpeg):quality(75)/cloudfront-us-east-1.images.arcpublishing.com/elcomercio/6Y2EDIISGFGVFANEVDCR5LCG34.jpg" class='photo'alt="menu item">
+                <img src="https://plantillasdememes.com/img/plantillas/messirve01624673157.jpg"  class='photo'alt="messirve">
                 <div class="item-info">
                     <header>
-                        <h4>Luis Miguel Rodriguez</h4>
-                        <a href="https://github.com/"><h4 class="boton">Perfil de GitHub</h4></a>
+                        <h4>Messirve</h4>
+                        <a href="https://github.com/" target="_blank"><h4 class="boton">Perfil de GitHub</h4></a>
                     </header>
                     <p class="item-text">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
